deployment/kubernetes/startmeup/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: startmeup
  name: startmeup
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"

spec:
  tls:
    - hosts:
        - startmeup.rke2-a.aurin-prod.cloud.edu.au
      secretName: quickstart-example-tls
  rules:
    - host: startmeup.rke2-a.aurin-prod.cloud.edu.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: startmeup-api
                port:
                  number: 80
